[package]
name = "orbital"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git"}
egui = {version = "0.19", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
atomic_float = "0.1"
crossbeam = "0.8"
serde_with = "2.1.0"
