[package]
name = "orbital"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[features]

default = []
profile = ["puffin", "puffin_http"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"], rev = "d777b02d33d5d807900de6c9c57691780e26f879" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "d777b02d33d5d807900de6c9c57691780e26f879"}
egui = {version = "0.19", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
atomic_float = "0.1"
crossbeam = "0.8"
serde_with = "2.1.0"
colorgrad = "0.6"
lazy_static = "1.4.0"
open = "3.2.0"
#Simd sin/cos
sleef = "0.3.0"
puffin = {version = "0.14.3", optional = true}
puffin_http = {version = "0.11", optional = true}
